--- a/yeb/yebback/yeb-server/pom.xml
+++ b/yeb/yebback/yeb-server/pom.xml
@@ -101,6 +101,17 @@
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-pool2</artifactId>
       </dependency>
+<!--      easyPoi-->
+      <dependency>
+          <groupId>cn.afterturn</groupId>
+          <artifactId>easypoi-spring-boot-starter</artifactId>
+          <version>4.1.3</version>
+      </dependency>
+<!--      rabbitMq-->
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-amqp</artifactId>
+      </dependency>
   </dependencies>
 
 </project>
